--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>UltraEdit 1.0.3</string>
+   <string>PDUltraEdit 1.0.4</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout_3">
@@ -106,7 +106,7 @@ N.B. Encrypted (real PS3) save data is not supported.</string>
      <x>0</x>
      <y>0</y>
      <width>580</width>
-     <height>21</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
